force-app/main/default/objects/SfdcDcx_Processing_Job__c/SfdcDcx_Processing_Job__c.object-meta.xml
<CustomObject>
    <description>ScanForce Open: provider-neutral processing status and compact structured result for one Salesforce File version. Records are created and transitioned only by ScanForce Open services.</description>
    <label>Document Processing Job</label>
    <nameField>
        <displayFormat>DOC-{00000000}</displayFormat>
        <label>Job Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Document Processing Jobs</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>