force-app/main/default/objects/SfdcDcx_Processing_Job__c/fields/Applied_At__c.field-meta.xml
<CustomField>
    <fullName>Applied_At__c</fullName>
    <description>When extracted values were last applied to the source record through ScanForce Open field mappings.</description>
    <label>Applied to Record At</label>
    <type>DateTime</type>
</CustomField>