force-app/main/default/objects/SfdcDcx_Processing_Job__c/fields/Attempt_Count__c.field-meta.xml
<CustomField><fullName>Attempt_Count__c</fullName><label>Attempt Count</label><type>Number</type><defaultValue>0</defaultValue><precision>3</precision><scale>0</scale></CustomField>