force-app/main/default/objects/SfdcDcx_Processing_Job__c/fields/Completed_At__c.field-meta.xml
<CustomField><fullName>Completed_At__c</fullName><label>Finished At</label><type>DateTime</type></CustomField>