force-app/main/default/objects/SfdcDcx_Processing_Job__c/fields/Correlation_Id__c.field-meta.xml
<CustomField><fullName>Correlation_Id__c</fullName><description>Non-PII trace identifier generated once at local job creation.</description><label>Correlation ID</label><length>64</length><type>Text</type><externalId>true</externalId><unique>true</unique><caseSensitive>true</caseSensitive></CustomField>