force-app/main/default/objects/SfdcDcx_Processing_Job__c/fields/Dedup_Hash__c.field-meta.xml
<CustomField><fullName>Dedup_Hash__c</fullName><description>Non-secret SHA-256 of org, file version and type. Used as the provider idempotency identity.</description><label>Submission Hash</label><length>64</length><type>Text</type><externalId>true</externalId><unique>true</unique><caseSensitive>true</caseSensitive></CustomField>