force-app/main/default/objects/SfdcDcx_Processing_Job__c/fields/Document_Type__c.field-meta.xml
<CustomField><fullName>Document_Type__c</fullName><label>Document Type</label><length>100</length><type>Text</type></CustomField>