force-app/main/default/objects/SfdcDcx_Processing_Job__c/fields/Error_Code__c.field-meta.xml
<CustomField><fullName>Error_Code__c</fullName><label>Error Code</label><length>80</length><type>Text</type></CustomField>