force-app/main/default/objects/SfdcDcx_Processing_Job__c/fields/Error_Message__c.field-meta.xml
<CustomField><fullName>Error_Message__c</fullName><label>Error Message</label><length>255</length><type>Text</type></CustomField>