force-app/main/default/objects/SfdcDcx_Processing_Job__c/fields/File_Name__c.field-meta.xml
<CustomField>
    <fullName>File_Name__c</fullName>
    <description>File title and extension captured from the authorized ContentVersion when the job was created. Display only.</description>
    <label>File Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>