force-app/main/default/objects/SfdcDcx_Processing_Job__c/fields/Provider_Job_Id__c.field-meta.xml
<CustomField><fullName>Provider_Job_Id__c</fullName><label>Provider Job ID</label><length>200</length><type>Text</type></CustomField>