force-app/main/default/objects/SfdcDcx_Processing_Job__c/fields/Result_JSON__c.field-meta.xml
<CustomField><fullName>Result_JSON__c</fullName><label>Result JSON</label><length>131072</length><type>LongTextArea</type><visibleLines>8</visibleLines></CustomField>