force-app/main/default/objects/SfdcDcx_Processing_Job__c/fields/Review_URL__c.field-meta.xml
<CustomField><fullName>Review_URL__c</fullName><label>Review URL</label><length>255</length><type>Text</type></CustomField>