force-app/main/default/objects/SfdcDcx_Processing_Job__c/fields/Source_File_Id__c.field-meta.xml
<CustomField><fullName>Source_File_Id__c</fullName><label>Content Version ID</label><length>18</length><type>Text</type></CustomField>