force-app/main/default/objects/SfdcDcx_Processing_Job__c/fields/Source_Record_Id__c.field-meta.xml
<CustomField><fullName>Source_Record_Id__c</fullName><label>Source Record ID</label><length>18</length><type>Text</type></CustomField>