force-app/main/default/objects/SfdcDcx_Processing_Job__c/fields/Status__c.field-meta.xml
<CustomField><fullName>Status__c</fullName><label>Status</label><type>Picklist</type><valueSet><restricted>true</restricted><valueSetDefinition><sorted>false</sorted><value><fullName>Queued</fullName><default>true</default><label>Queued</label></value><value><fullName>Processing</fullName><default>false</default><label>Processing</label></value><value><fullName>Review Required</fullName><default>false</default><label>Review Required</label></value><value><fullName>Completed</fullName><default>false</default><label>Completed</label></value><value><fullName>Failed</fullName><default>false</default><label>Failed</label></value><value><fullName>Cancelled</fullName><default>false</default><label>Cancelled</label></value><value><fullName>Timed Out</fullName><default>false</default><label>Timed Out</label></value></valueSetDefinition></valueSet></CustomField>