force-app/main/default/objects/SfdcDcx_Processing_Job__c/fields/Submission_Key__c.field-meta.xml
<CustomField><fullName>Submission_Key__c</fullName><description>Current ordinary-submit identity. Cleared after terminal failure so a safe new attempt can be created.</description><label>Ordinary Submission Key</label><length>64</length><type>Text</type><externalId>true</externalId><unique>true</unique><caseSensitive>true</caseSensitive></CustomField>