force-app/main/default/objects/SfdcDcx_Processing_Job__c/validationRules/Source_Association_Immutable.validationRule-meta.xml
<ValidationRule><fullName>Source_Association_Immutable</fullName><active>true</active><description>Authorization is frozen when the connector job is created.</description><errorConditionFormula>AND(NOT(ISNEW()), OR(ISCHANGED(Source_File_Id__c), ISCHANGED(Source_Record_Id__c)))</errorConditionFormula><errorMessage>The authorized source association is immutable.</errorMessage></ValidationRule>