force-app/main/default/objects/SfdcDcx_Processing_Job__c/listViews/All_Jobs.listView-meta.xml
<ListView>
    <fullName>All_Jobs</fullName>
    <columns>NAME</columns>
    <columns>File_Name__c</columns>
    <columns>Status__c</columns>
    <columns>Document_Type__c</columns>
    <columns>Error_Code__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Completed_At__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Jobs</label>
</ListView>