force-app/main/default/objects/SfdcDcx_Processing_Job__c/listViews/Needs_Attention.listView-meta.xml
<ListView>
    <fullName>Needs_Attention</fullName>
    <columns>NAME</columns>
    <columns>File_Name__c</columns>
    <columns>Status__c</columns>
    <columns>Document_Type__c</columns>
    <columns>Error_Code__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Completed_At__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Failed,Cancelled,Timed Out</value>
    </filters>
    <label>Needs Attention</label>
</ListView>